// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelloWorld HelloWorld component renders correctly 1`] = `
<div
  className="pds-wds-react-hello-world"
>
  Hello, 
  Planetary Data System
  !
</div>
`;

exports[`HelloWorld The name prop works 1`] = `
<div
  className="pds-wds-react-hello-world"
>
  Hello, 
  Universe
  !
</div>
`;
